--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #sizdeki port numarasi 5432 olmali!
-spring.datasource.url= jdbc:postgresql://localhost:5432/socialnews_db_public
-spring.datasource.username= db_user
-spring.datasource.password= password
+spring.datasource.url=jdbc:postgresql://localhost:5433/socialnews_db
+spring.datasource.username=db_user
+spring.datasource.password=db_password
 
-spring.jpa.hibernate.ddl-auto= create
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-binding-errors=always
 server.error.include-message=always
